mountall (2.39) UNRELEASED; urgency=low

  * Adjust parsing of device names so that network mounts pointing to the
    server's root don't have the path mis-normalized to the empty string.
    Thanks to Damien Churchill <damien.churchill@ukplc.net> for the initial
    implementation.  LP: #809221.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Mon, 20 Aug 2012 16:45:42 -0700

mountall (2.38) unstable; urgency=low

  * Counterproductively document in debian/copyright the license of files in
    intl that form no part of the binary package, to get through the Debian
    NEW queue.

 -- Steve Langasek <vorlon@debian.org>  Sat, 30 Jun 2012 11:44:59 -0700

mountall (2.37) unstable; urgency=low

  * Initial upload to Debian.
  * Document the branch location with Vcs-Bzr.
  * Mark myself as maintainer, with Scott and James as uploaders.
  * Drop maintainer scripts, only used for upgrades from natty and earlier
    and no longer relevant post-precise.
  * Replace build flag handling in debian/rules with debhelper compat 9 and
    dpkg-buildflags.
  * Remove extra space in fsck progress message.  LP: #573304.
  * Adjust build-dependencies for the differing plymouth -dev package name
    in Debian vs. Ubuntu.
  * Fix an inverted check for whether the change-mount mntctl has a
    different device name.
  * Update standards-version to 3.9.3.
  * debian/copyright: copyright-format 1.0, and link explicitly to the GPL-2
    license file since that's what applies.

  [ Raphaël Pinson ]
  * Honor nobootwait option for /var/* and /usr/* remote filesystems.
    LP: #654545

  [ Eelco Dolstra ]
  * Install the SIGUSR1 signal handler before daemonizing mountall, so that
    there's no race with signals from network interfaces being brought up.
    LP: #960079.

  [ Adam Gleichsner ]
  * Add options to mountall(8) manual page.  LP: #805509.

 -- Steve Langasek <vorlon@debian.org>  Thu, 28 Jun 2012 19:35:33 +0000

mountall (2.36) precise; urgency=low
