@@ -1,0 +1,9 @@
+# mountall.sh - compatibility job for sysvinit dependencies
+#
+# This job runs once local filesystems are mounted, to signal startpar
+# that other rcS jobs relying on the historic mountall.sh interface can
+# continue.
+
+description	"Signal sysvinit that local filesystems are mounted"
+
+start on local-filesystems
