@@ -1,0 +1,9 @@
+# mountkernfs.sh - compatibility job for sysvinit dependencies
+#
+# This job runs once virtual filesystems are mounted, to signal startpar
+# that other rcS jobs relying on the historic mountkernfs.sh interface can
+# continue.
+
+description	"Signal sysvinit that virtual filesystems are mounted"
+
+start on virtual-filesystems
