@@ -1,0 +1,9 @@
+# mountnfs.sh - compatibility job for sysvinit dependencies
+#
+# This job runs once local filesystems are mounted, to signal startpar
+# that other rcS jobs relying on the historic mountnfs.sh interface can
+# continue.
+
+description	"Signal sysvinit that remote filesystems are mounted"
+
+start on remote-filesystems
